--- a/index.html
+++ b/index.html
@@ -6,167 +6,213 @@
 
   <title>James Anderson Web Dev Portfolio</title>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
-<Header>
-	<div class="nav-holder">
-		<nav>
-			<ul>
-				<li>
-					<a href="#">Home</a>
-				</li>
-				<li>
-					<a href="#">Projects</a>
-				</li>
-				<li>
-					<a href="#">Skills</a>
-				</li>
-				<li>
-					<a href="#">Contact</a>
-				</li>
-			</ul>
-		</nav>
-	</div>
-</Header>
-	<div class="content">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="container section">
-						<div class="row">
-							<div class="col">
-								<div class="section-title">
-									<h2>Overview</h2>
-								</div>
-								<div class="section-sub-title">
-									<h3>Who am I? Why should you care?</h3>
-								</div>
-								<div class="section-content">
-									<p>Hello, my name is James Anderson. I am a Web Designer and Developer from Phoenix Arizona. I love the world of the internet and technology. It is like a playground for one to do what they want with, it is vast and ever expanding. It offers the ability to be creative and tackle any challenge that you want. I have been teaching myself how to code and build websites since 2015 I have learned a great deal and have the luxury of putting that knowledge to test every day. My main focus has been HTML, CSS, JavaScript, JQuery, Wordpress and PHP. While each has similarites everyone is different in it's own way and I am always excited to see who new things can come from each.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="container section">
-						<div class="row">
-							<div class="col-lg-6">
-								<div class="boxed-cta-links">
-									<div class="overlay">
-										<div class="cta-content">
-											<div class="cta-title">
-												<h4>Projects</h4>
-											</div>
-											<div class="cta-content">
-												<p>Check out a few of the things I have worked on</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-6">
-								<div class="boxed-cta-links">
-									<div class="overlay">
-										<div class="cta-content">
-											<div class="cta-title">
-												<h4>Skills</h4>
-											</div>
-											<div class="cta-content">
-												<p>Check out a few of the things I have worked on</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="container section">
-						<div class="row">
-							<div class="col-lg-12">
-								<div class="contact-cta-link">
-									<div class="cta-content">
-										<div class="cta-title">
-											<h3>Got a Question?</h3>
-											<h4>Give me a call anytime! 602.326.9651</h4>
-										</div>
-										<div class="cta-button">
-											
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				<div class="container section">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="section-title">
-								<h2>Projects</h2>
-							</div>
-							<div class="section-sub-title">
-								<h3>A bit of a showcase</h3>
-							</div>
-							<div class="section-content">
-								<p>Through my time in the business I have had the privilage to work a many different projects mostly for work but also for my own interest. I am very proud of the everything that I have worked on. Everyday is a new opportunity to discover somthing that I did not know before. With everything that I work on I try and give every piece of myself into it and producing something of the higest quaility.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="container section">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="projects-bg-image">
-								<div class=project-content">
-									<div class="project-title">
-										<h4>Hidemasters</h4>
-									</div>
-									<div class="project-description">
-										<p>For this project I was tasked with designing a website as well as creating a brand and concept. Thecompany themselves create hand made leather products out of Colorado but for this site they wanted the focus to be on just the leather belts they sell. I stated with a pre-made wordpress theme and focused the design around the belts being for the working man, think things like dickies or carhartt. All the imagery and content was made to appeal to an older generation of hard workers with the tag line "You need a belt that works as hard as you do". This was an incredibly fun site and allowed me more freedom to do what I wanted, The website is built in wordpress and has a full online store using Woocommerce.</p>
-									</div>
-								</div>
-								<div class="more-projects-buttons">
-									<div class="container">
-										<div class="row">
-											<div class="col-lg-3 project-thumbnail">
-												<div class="image-holder">
-													<div class=project-button-title>
-														<h4>Fantasy Football Helper</h4>
-													</div>
-												</div>
-											</div>
-											<div class="col-lg-3 project-thumbnail">
-												<div class="image-holder">
-													<div class=project-button-title>
-														<h4>Fantasy Football Helper</h4>
-													</div>
-												</div>
-											</div>
-											<div class="col-lg-3 project-thumbnail">
-												<div class="image-holder">
-													<div class=project-button-title>
-														<h4>Fantasy Football Helper</h4>
-													</div>
-												</div>
-											</div>
-											<div class="col-lg-3 project-thumbnail">
-												<div class="image-holder">
-													<div class=project-button-title>
-														<h4>Fantasy Football Helper</h4>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="content">
+    <section class="main-title">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="title-text">I'm James</h1>
+                <h4>Designer, Developer, Marketer</h4>
+            </div>
+        </div>
+    </section>
+    <section class="overview">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="section-info">
+                        <h2 class="section-header">Overview</h2>
+                        <p>Hello, my name is James Anderson. I am a Web Designer and Developer from Phoenix Arizona. I love the world of the internet and technology. It is like a playground for one to do what they want with, it is vast and ever expanding. It offers the ability to be creative and tackle any challenge that you want. I have been teaching myself how to code and build websites since 2015 I have learned a great deal and have the luxury of putting that knowledge to test every day. My main focus has been HTML, CSS, JavaScript, JQuery, Wordpress and PHP. While each has similarites, everyone is different in it's own way and I am always excited to see what new things can come from each.</p>
+                
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="skills-section">
+        <div class="continer-fluid">
+            <div class="row align-items-end">
+                <div class="col-md-4 col-sm-12 skills-left">
+                    <div class="skills">
+                        <div class="continer">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h4 class="skills-title">Designer</h4>
+                                    <ul>
+                                        <li>Website design</li>
+                                        <li>UI/UX Design</li>
+                                        <li>Photoshop</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Image Placeholder</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 skills-center">
+                    <div class="skills">
+                        <div class="continer">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h4 class="skills-title">Developer</h4>
+                                    <ul>
+                                        <li>HTML</li>
+                                        <li>CSS</li>
+                                        <li>JavaScript</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Image Placeholder</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 skills-right">
+                    <div class="skills">
+                        <div class="continer">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h4 class="skills-title">Marketer</h4>
+                                    <ul>
+                                        <li>Pay Per Click</li>
+                                        <li>Google Search</li>
+                                        <li>Google Display</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-6">
+                                    <p>Image Placeholder</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <div class="section-info">
+                            <h2 class="section-header">Past Work</h2>
+                            <p>These are a few of the projects that I have been a part of. Although this is not everything I believe that it showcases a wide variety of my skills</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-6">
+                                    <h4>Job 1</h4>
+                                    <p>Small Info About Job</p>
+                                </div>
+                                <div class="col-sm-4 offset-sm-1">
+                                    <div class="button-holder">
+                                        <button type="button" class="btn btn-primary">Learn More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-6">
+                                    <h4>Job 1</h4>
+                                    <p>Small Info About Job</p>
+                                </div>
+                                <div class="col-sm-4 offset-sm-1">
+                                    <div class="button-holder">
+                                        <button type="button" class="btn btn-primary">Learn More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-6">
+                                    <h4>Job 1</h4>
+                                    <p>Small Info About Job</p>
+                                </div>
+                                <div class="col-sm-4 offset-sm-1">
+                                    <div class="button-holder">
+                                        <button type="button" class="btn btn-primary">Learn More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-6">
+                                    <h4>Job 1</h4>
+                                    <p>Small Info About Job</p>
+                                </div>
+                                <div class="col-sm-4 offset-sm-1">
+                                    <div class="button-holder">
+                                        <button type="button" class="btn btn-primary">Learn More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-6">
+                                    <h4>Job 1</h4>
+                                    <p>Small Info About Job</p>
+                                </div>
+                                <div class="col-sm-4 offset-sm-1">
+                                    <div class="button-holder">
+                                        <button type="button" class="btn btn-primary">Learn More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-6">
+                                    <h4>Job 1</h4>
+                                    <p>Small Info About Job</p>
+                                </div>
+                                <div class="col-sm-4 offset-sm-1">
+                                    <div class="button-holder">
+                                        <button type="button" class="btn btn-primary">Learn More</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
