--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>James Anderson Web Dev Portfolio</title>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
@@ -16,7 +15,8 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container title-holder">
                 <h1 class="title-text">I'm James</h1>
-                <h4>Designer, Developer, Marketer</h4>
+                <h4>Designer, Developer, Google Ads Specialist</h4>
+                <h4><a href="mailto:jamesandersonwebdev@gmail.com">jamesandersonwebdev@gmail.com</a></h4>
             </div>
             <div calsss="headshot">
                 <img src="images/head-shot.png">
@@ -29,7 +29,11 @@
                 <div class="col">
                     <div class="section-info">
                         <h2 class="section-header">Overview</h2>
-                        <p>Hello, my name is James Anderson. I am a Web Designer and Developer from Phoenix Arizona. I love the world of the internet and technology. It is like a playground for one to do what they want with, it is vast and ever expanding. It offers the ability to be creative and tackle any challenge that you want. I have been teaching myself how to code and build websites since 2015 I have learned a great deal and have the luxury of putting that knowledge to test every day. My main focus has been HTML, CSS, JavaScript, JQuery, Wordpress and PHP. While each has similarites, everyone is different in it's own way and I am always excited to see what new things can come from each.</p>
+                        <p>Hello, my name is James Anderson. I am a Web Designer and Developer from Phoenix, Arizona. I love the world of the internet and technology. 
+                            It is like a playground for one to do what they want with, it is vast and ever expanding. The internet offers the ability to be creative and tackle 
+                            any challenge that you want. I have been teaching myself how to code and build websites since 2015. I have learned a great deal and have the 
+                            luxury of putting that knowledge to the test every day. My main focus has been HTML, CSS, JavaScript, JQuery, Wordpress and PHP. While each skill has similarites, 
+                            everyone is different in it's own way and I am always excited to see what new things can come from each.</p>
                 
                     </div>
                 </div>
@@ -39,11 +43,11 @@
     <section class="skills-section">
         <div class="container">
             <div class="row align-items-end">
-                <div class="col-md-4 col-sm-12 skills-left">
+                <div class="col-md-4 col-12 skills-left">
                     <div class="skills">
                         <div class="continer">
                             <div class="row">
-                                <div class="col">
+                                <div class="col-12">
                                     <div class="list-header-box">
                                         <i class="fas fa-pencil-alt fa-2x"></i>
                                         <h4 class="skills-title">Designer</h4>
@@ -52,17 +56,20 @@
                                     <div class="list-box">
                                         <p>Website design</p>
                                         <p>Photoshop</p>
+                                        <p>print design</p>
+                                        <p>graphic design</p>
+                                        <p>landing page design</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 skills-center">
+                <div class="col-md-4 col-12 skills-center">
                     <div class="skills">
                         <div class="continer">
                             <div class="row">
-                                <div class="col">
+                                <div class="col-12">
                                     <div class="list-header-box">
                                         <i class="fas fa-code fa-2x"></i>
                                         <h4 class="skills-title">Developer</h4>
@@ -71,25 +78,31 @@
                                     <div class="list-box">
                                         <p>JavaScript</p>
                                         <p>JQuery</p>
+                                        <p>Wordpress design/development</p>
+                                        <p>HTML</p>
+                                        <p>CSS</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12 skills-right">
+                <div class="col-md-4 col-12 skills-right">
                     <div class="skills">
                         <div class="continer">
                             <div class="row">
-                                <div class="col">
+                                <div class="col-12">
                                     <div class="list-header-box">
                                         <i class="fab fa-google fa-2x"></i>
-                                        <h4 class="skills-title">Marketer</h4>
+                                        <h4 class="skills-title">Google Ads Specialist</h4>
                                     </div>
                                     <hr>
                                     <div class="list-box">
-                                        <p>AdWords Search</p>
-                                        <p>AdWords Display</p>
+                                        <p>Google Ads Search Certified</p>
+                                        <p>Google Ads Display Certified</p>
+                                        <p>Google Ads Mobile Certified</p>
+                                        <p>Google Ads Shopping Certified</p>
+                                        <p>Google Ads Video Certified</p>
                                     </div>
                                 </div>
                             </div>
@@ -105,7 +118,7 @@
                 <div class="col-md-8 offset-md-2">
                     <div class="section-info">
                             <h2 class="section-header">Past Work</h2>
-                            <p>These are a few of the projects that I have been a part of. Although this is not everything I believe that it showcases a wide variety of my skills</p>
+                            <p>These are a few of the projects that I have been a part of. Although this is not everything I believe that it showcases a wide variety of my skills. If you wish to view the project in full please click the image to link to the website</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +129,7 @@
                             <div class="row align-items-center">
                                 <div class="col-sm-12">
                                     <div class="project-image">
-                                        <img src="images/poke-shack.jpg">
+                                        <a href="https://realleatherbelt.com/"><img src="images/hidemasters.jpg"></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
@@ -133,12 +146,48 @@
                             <div class="row align-items-center">
                                 <div class="col-sm-12">
                                     <div class="project-image">
-                                        <img src="images/fantasy-helper.jpg">
+                                        <a href="Fantasy/WhoShouldIPlay.html"><img src="images/fantasy-helper.jpg"></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <h4>Fantasy Football Helper</h4>
-                                    <p>Personal project made using JacScript and JQuery.</p>
+                                    <p>Personal project made using JavaScript and JQuery.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12">
+                                    <div class="project-image">
+                                        <a href="https://xtrememf.com/"><img src="images/xtreme-machine.jpg"></a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12">
+                                    <h4>Gift Card/Coupon Card</h4>
+                                    <p>Custom designed printed gift card/coupon card for a local HVAC Company.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12">
+                                    <div class="project-image">
+                                        <a href="images/foody-mockup-v6-merged.jpg" class="lightbox_trigger"><img id="myImg" src="images/poke-shack-2.jpg"></a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12">
+                                    <h4>Poke-Shack</h4>
+                                    <p>Website Design for local Poke restaurant with the added feature of online ordering.</p>
                                 </div>
                             </div>
                         </div>
@@ -154,6 +203,23 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
+                                    <h4>Fantasy Football Helper</h4>
+                                    <p>Personal project made using JavaScript and JQuery.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content-wrap">
+                        <div class="hover-content">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12">
+                                    <div class="project-image">
+                                        <a href="images/mockup-wanderers-v3.jpg" class="lightbox_trigger"><img src="images/saltforkranch.jpg"></a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12">
                                     <h4>Gift Card/Coupon Card</h4>
                                     <p>Custom designed printed gift card/coupon card for a local HVAC Company.</p>
                                 </div>
@@ -162,12 +228,14 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
+    <div class="bottom-email">
+        <h4><a href="mailto:jamesandersonwebdev@gmail.com">jamesandersonwebdev@gmail.com</a></h4>
+    </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="js/scripts.js"></script>
 </body>
+<script src="https://code.jquery.com/jquery-1.6.2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="js/scripts.js"></script>
 </html>
