Past Work Updates
Updated the titles and descriptions for the past work section.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
-                                    <h4>Poke-Shack</h4>
-                                    <p>Website Design for local Poke restaurant with the added feature of online ordering.</p>
+                                    <h4>Hidemasters - Leather Belts</h4>
+                                    <p>Wordpress site design and branding for a leather worker looking to make sales of hand made leather belts online.</p>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="col-sm-12">
                                     <h4>Fantasy Football Helper</h4>
-                                    <p>Personal project made using JavaScript and JQuery.</p>
+                                    <p>This is a personal project to practice and expand my skills. It is still a work in progress but is made with HTML,CSS and JavaScript.</p>
                                 </div>
                             </div>
                         </div>
@@ -167,8 +167,8 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
-                                    <h4>Gift Card/Coupon Card</h4>
-                                    <p>Custom designed printed gift card/coupon card for a local HVAC Company.</p>
+                                    <h4>Xtreme MF</h4>
+                                    <p>Wordpress design concept for a metal fabricator and race sponsor for off-road UTV vehicles. The site is a full woocommerce site.</p>
                                 </div>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                                 </div>
                                 <div class="col-sm-12">
                                     <h4>Poke-Shack</h4>
-                                    <p>Website Design for local Poke restaurant with the added feature of online ordering.</p>
+                                    <p>Wordpress Design mock up for local Poke restaurant. Design was based around the Hawaiian concept with online ordering capabilities</p>
                                 </div>
                             </div>
                         </div>
@@ -203,8 +203,8 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
-                                    <h4>Fantasy Football Helper</h4>
-                                    <p>Personal project made using JavaScript and JQuery.</p>
+                                    <h4>Gift Card/Coupon Card</h4>
+                                    <p>This was a gift card/coupon card that was created to for an HVAC company. They were entended to be passed out as permant $20 off cards.</p>
                                 </div>
                             </div>
                         </div>
@@ -220,8 +220,8 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
-                                    <h4>Gift Card/Coupon Card</h4>
-                                    <p>Custom designed printed gift card/coupon card for a local HVAC Company.</p>
+                                    <h4>Salt Fork Ranch</h4>
+                                    <p>Wordpress design mock up for a ranch/outfitter in Texas. Design was to sell people to going on "Adventures" to hunt various animals at the ranch.</p>
                                 </div>
                             </div>
                         </div>
